Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure iusto officiis recusandae numquam in dolores modi, quod laborum hic, ullam pariatur temporibus distinctio! Facilis, aliquam praesentium rem consequuntur enim nemo?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quis eaque id obcaecati tempore eligendi ipsum iusto officia? Qui velit quaerat quas nulla impedit voluptate porro, cum modi facilis quasi.</p>
 </body>
 </html>
